force-app/main/default/objects/Account/fields/Academic_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_End_Year__c</fullName>
    <label>Academic End Year</label>
    <type>Date</type>
</CustomField>