force-app/main/default/objects/Account/fields/Academic_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Start_Year__c</fullName>
    <label>Academic Start Year</label>
    <type>Date</type>
</CustomField>