force-app/main/default/objects/Account/fields/Additional_Amm__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amm__c</fullName>
    <label>Additional Amenities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armless Plastic chiar , marble beige color, without handres</fullName>
            </value>
            <value>
                <fullName>wood chair with cushion</fullName>
            </value>
            <value>
                <fullName>Mtech tables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>