force-app/main/default/objects/Account/fields/Credentialing_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Identifier__c</fullName>
    <description>An International Resource Identifier that uniquely identifies an Account for credentialing purposes.</description>
    <externalId>true</externalId>
    <inlineHelpText>An International Resource Identifier that uniquely identifies an Account for credentialing purposes.</inlineHelpText>
    <label>Credentialing Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>