force-app/main/default/objects/Account/fields/Display_Name_Program__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_Program__c</fullName>
    <label>Display Name (Program)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>