force-app/main/default/objects/Account/fields/Examination_Vertical_Head__c.field-meta.xml
<CustomField>
    <fullName>Examination_Vertical_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examination Vertical Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>