force-app/main/default/objects/Account/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <label>Intake</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>