force-app/main/default/objects/Account/fields/Intake_Per_Section__c.field-meta.xml
<CustomField>
    <fullName>Intake_Per_Section__c</fullName>
    <label>Intake Per Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>