force-app/main/default/objects/Account/fields/Integrated_with_SAP__c.field-meta.xml
<CustomField>
    <fullName>Integrated_with_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated with SAP</label>
    <type>Checkbox</type>
</CustomField>