force-app/main/default/objects/Account/fields/No_of_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years__c</fullName>
    <label>No of Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>