force-app/main/default/objects/Account/fields/NPF_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>NPF_Program_ID__c</fullName>
    <label>NPF Program ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>