force-app/main/default/objects/Account/fields/NPF_Program_ID_Regular__c.field-meta.xml
<CustomField>
    <fullName>NPF_Program_ID_Regular__c</fullName>
    <externalId>true</externalId>
    <label>NPF Program ID (Regular)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>