force-app/main/default/objects/Account/fields/NPF_School_ID__c.field-meta.xml
<CustomField>
    <fullName>NPF_School_ID__c</fullName>
    <externalId>true</externalId>
    <label>NPF School ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>