force-app/main/default/objects/Account/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Account</label>
    <type>Checkbox</type>
</CustomField>