force-app/main/default/objects/Account/fields/PG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PG_End_Date__c</fullName>
    <label>PG End Date</label>
    <type>Date</type>
</CustomField>