force-app/main/default/objects/Account/fields/PG_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PG_Start_Date__c</fullName>
    <label>PG Start Date</label>
    <type>Date</type>
</CustomField>