force-app/main/default/objects/Account/fields/Program_Alias__c.field-meta.xml
<CustomField>
    <fullName>Program_Alias__c</fullName>
    <label>Program Alias</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>