force-app/main/default/objects/Account/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>Ph.D</fullName>
            </value>
            <value>
                <fullName>PG Diploma</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>