force-app/main/default/objects/Account/fields/Reva_University__c.field-meta.xml
<CustomField>
    <fullName>Reva_University__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;Educational_Institution&quot; &amp;&amp; CONTAINS(Name,&quot;University&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reva University?</label>
    <type>Checkbox</type>
</CustomField>