force-app/main/default/objects/Account/fields/Rpl_Placement_Vertical_Head__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Placement_Vertical_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Vertical Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>