force-app/main/default/objects/Account/fields/SAP_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Name__c</fullName>
    <label>SAP Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>