force-app/main/default/objects/Account/fields/School_Head__c.field-meta.xml
<CustomField>
    <fullName>School_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>