force-app/main/default/objects/Account/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>