force-app/main/default/objects/Account/fields/sfal__CaseTeamTemplateName__c.field-meta.xml
<CustomField>
    <fullName>sfal__CaseTeamTemplateName__c</fullName>
    <description>The name of the Predefined Case Team this Account corresponds to.</description>
    <externalId>true</externalId>
    <inlineHelpText>The name of the Predefined Case Team this Account corresponds to.</inlineHelpText>
    <label>Case Team Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>