force-app/main/default/objects/Account/fields/SLCM_HCM_ID__c.field-meta.xml
<CustomField>
    <fullName>SLCM_HCM_ID__c</fullName>
    <externalId>true</externalId>
    <label>SLCM - HCM ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>