force-app/main/default/objects/Account/fields/UG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>UG_End_Date__c</fullName>
    <label>UG End Date</label>
    <type>Date</type>
</CustomField>