force-app/main/default/objects/Account/fields/UG_Start_date__c.field-meta.xml
<CustomField>
    <fullName>UG_Start_date__c</fullName>
    <label>UG Start date</label>
    <type>Date</type>
</CustomField>