force-app/main/default/objects/Account/fields/Vertical_Head__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>