force-app/main/default/objects/Account/recordTypes/Business_Organization.recordType-meta.xml
<RecordType>
    <fullName>Business_Organization</fullName>
    <active>true</active>
    <description>A business organization.</description>
    <label>Business Organization</label>
</RecordType>