force-app/main/default/objects/Account/validationRules/Owner_Change_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Change_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
($Profile.Name = &apos;Counselor&apos;) &amp;&amp; ($User.Username &lt;&gt; &apos;anjana.vasu@reva.edu.in.stratosuat&apos;),
OR(
ISCHANGED( OwnerId )
))</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You don&apos;t have access to change the owner. Please contact Admission Head.</errorMessage>
</ValidationRule>