force-app/main/default/objects/Account/listViews/Faculty_Accounts_Educational_Institution.listView-meta.xml
<ListView>
    <fullName>Faculty_Accounts_Educational_Institution</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Educational_Institution</value>
    </filters>
    <filters>
        <field>Sequence__c</field>
        <operation>notEqual</operation>
        <value>R-1</value>
    </filters>
    <label>Faculty Accounts-Educational Institution</label>
    <sharedTo>
        <group>Admission_Admin_Team</group>
        <group>Exam_Admin_Team</group>
        <group>Finance_Admin_Team</group>
        <group>ICT_Admin_Team</group>
        <group>IQAC_Admin_Team</group>
        <group>RO_Admin_Team</group>
    </sharedTo>
</ListView>