force-app/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
    <fullName>Household_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HH_Account</value>
    </filters>
    <label>Household Accounts</label>
    <sharedTo>
        <group>Admission_Admin_Team</group>
        <group>Exam_Admin_Team</group>
        <group>Finance_Admin_Team</group>
        <group>ICT_Admin_Team</group>
        <group>IQAC_Admin_Team</group>
        <group>RO_Admin_Team</group>
    </sharedTo>
</ListView>