force-app/main/default/objects/Account/listViews/School_Accounts_University_Department.listView-meta.xml
<ListView>
    <fullName>School_Accounts_University_Department</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>School_Head__c</columns>
    <columns>Program_Code__c</columns>
    <columns>hed__School_Code__c</columns>
    <columns>Vertical_Head__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.University_Department</value>
    </filters>
    <label>School Accounts - University Department</label>
</ListView>